Added starter code.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
 <body>
   
+  <div id="scene-description">
+    <h1>Scene Title</h1>
+    <p>Scene Description</p>
+  </div>
+
+  <div id="scene-container">
+
+  </div>
 
 
 
