Added almost all of the animation elements.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
   </div>
 
   <div id="scene-container">
-
+    <img id="" src="">
+    <img id="trexidle" src="trexidle-removebg-preview.png">
+    <img id="trexrun" src="">
+    <img id="toilet" src="toilet-removebg-preview.png">
+    <img id="car1" src="jeep.png">
+    <img id="car2" src="jeep.png">
+    <img id="alan" src="alan-removebg-preview.png">
+    <img id="ian" src="ian-removebg-preview.png">
+    <img id="flare1" src="">
+    <img id="flare2" src="">
   </div>
 
 
