Finished T-rex animation.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
   </div>
 
   <div id="scene-container">
-    <img id="" src="">
+    <img id="trexrun" src="trexrun-removebg-preview.png">
     <img id="trexidle" src="trexidle-removebg-preview.png">
-    <img id="trexrun" src="">
     <img id="toilet" src="toilet-removebg-preview.png">
     <img id="car1" src="jeep.png">
     <img id="car2" src="jeep.png">
