--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <img id="car2" src="jeep.png">
     <img id="alan" src="alan-removebg-preview.png">
     <img id="ian" src="ian-removebg-preview.png">
-    <img id="flare1" src="">
+    <img id="flare1" src="flare-removebg-preview.png">
     <img id="flare2" src="">
   </div>
 
