--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   
   <div id="scene-description">
-    <h1>Scene Title</h1>
-    <p>Scene Description</p>
+    <h1>T-rex on the Loose!</h1>
+    <p>The T-rex has just escaped from its paddock, and now it is roaming free in the forest at night. However, Alan, Ian, and the lawyer unfortunately come face to face with the wild T-rex!</p>
   </div>
 
   <div id="scene-container">
@@ -24,7 +24,8 @@
     <img id="alan" src="alan-removebg-preview.png">
     <img id="ian" src="ian-removebg-preview.png">
     <img id="flare1" src="flare-removebg-preview.png">
-    <img id="flare2" src="">
+    <img id="flare2" src="flare-removebg-preview.png">
+    <img id="lawyer" src="lawyerguy-removebg-preview.png">
   </div>
 
 
